# Markov-Chains_tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Dokumentaatio/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  tyoaikakirja.md  viiikkoraportti6.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
data/: corpus.txt
src/: corpus_data.py  dlnltk.py  index.py  markov_chain.py  tokenize_corpus.py  trie.py  trie_node.py
src/tests/: corpus_data_test.py  markov_chain_test.py  tokenize_corpus_test.py  trie_node_test.py  trie_test.py
src/ui/: app_widget.py  ui.py
