[tool.poetry]
name = "markov-chains_tiralabra"
version = "0.1.0"
description = ""
authors = ["Kosti Vesterinen <kosti.vesterinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
